# hkd-sop

./: .gitignore  hkd-sop.cabal
src/Generics/SOP/: HKD.hs
src/Generics/SOP/HKD/: FromSOP.hs  Functions.hs  Universe.hs
