name: hkd-sop
version: 0.1
build-type: Simple
cabal-version: >= 2.0

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Generics.SOP.HKD
    Generics.SOP.HKD.FromSOP
    Generics.SOP.HKD.Functions
    Generics.SOP.HKD.Universe
  build-depends:
    base,
    generics-sop >= 0.4
  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    MultiParamTypeClasses
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
